--- a/client/src/index.css
+++ b/client/src/index.css
@@ -130,10 +130,11 @@ nav ul li a:hover {
 .banner {
   width: 100%;
   justify-content: center;
-  background-color: #007bff;
+  background-color: #333;
   color: #fff;
   padding: 20px;
   margin-bottom: 20px;
+  display: flex;
 }
 
 .banner h1 {
